[package]
authors = ["John King <jk@almostmachines.dev>"]
categories = ["asynchronous"]
description = "A simple, agnostic reactive extensions event bus utilising rxRust under the hood."
edition = "2024"
homepage = "https://github.com/almostmachines/rx_event_bus"
keywords = ["rx", "reactivex", "rxrust", "events", "pubsub"]
license = "MIT"
name = "rx_event_bus"
readme = "README.md"
repository = "https://github.com/almostmachines/rx_event_bus"
version = "0.1.1"

[dependencies]
rxrust = "1.0.0-rc.3"

[[example]]
name = "local_event_bus"

[[example]]
name = "shared_event_bus"

[dev-dependencies]
cargo-llvm-cov = "0.8.5"
